fixes icon/text alignment in sticky nav buttons

--- a/app/assets/stylesheets/modules/buttons.scss
+++ b/app/assets/stylesheets/modules/buttons.scss
@@ -21,3 +21,15 @@
   margin-top: 20px;
   background-color: #f6f6f6;
 }
+
+.sticky-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.sticky-button span {
+  text-align: left;
+  margin-left: 10px;
+}
